removing flapdoodle and using Testcontainers for build pipeline to pass.