@@ -41,8 +41,12 @@
         <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
         <!-- Docker property -->
         <jib-maven-plugin.version>3.4.2</jib-maven-plugin.version>
-        <de-flapdoodle-embed-mongo.version>4.13.0</de-flapdoodle-embed-mongo.version>
+        <test-containers.version>1.19.7</test-containers.version>
         <dependency-check-plugin.version>9.1.0</dependency-check-plugin.version>
+        <argLine>
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED
+        </argLine>
     </properties>
 
     <dependencyManagement>
@@ -178,9 +182,20 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>de.flapdoodle.embed</groupId>
-            <artifactId>de.flapdoodle.embed.mongo</artifactId>
-            <version>${flapdoodle-embed-mongo.version}</version>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers-bom</artifactId>
+            <version>${test-containers.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>mongodb</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
